hphp/hack/test/typecheck/sealed/method_no_sealed_constructors.php
<?hh

<<file: __EnableUnstableFeatures('sealed_methods')>>

class C {
  <<__Sealed(D::class)>>
  public function __construct() {}
}

class D{}
